--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HomeWork3</string>
     <string name="change">Change</string>
+    <string name="a">A</string>
 </resources>
